--- a/projectStack/src/app/login-signup/signup/signup.component.html
+++ b/projectStack/src/app/login-signup/signup/signup.component.html
@@ -9,10 +9,16 @@
         <mat-form-field appearance="outline" class="w-xl-50 w-md-100 px-2">
             <mat-label>First Name</mat-label>
             <input matInput formControlName="firstName" placeholder="John">
+            <mat-error *ngIf="signUpFormGroup.get('firstName').errors && signUpFormGroup.get('firstName').errors.minlength">
+              First name must contain at least 4 characters
+            </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-xl-50 w-md-100 px-2">
             <mat-label>Last Name</mat-label>
             <input matInput formControlName="lastName" placeholder="Millar">
+            <mat-error *ngIf="signUpFormGroup.get('lastName').errors && signUpFormGroup.get('lastName').errors.minlength">
+              Last name must contain at least 4 characters
+            </mat-error>
         </mat-form-field>
     </div>
     <div class="d-xl-flex d-md-block py-2">
@@ -48,7 +54,10 @@
     <custom-button
     color="primary"
     [loading]="loading"
-    [passedClass]="{'mx-auto':true,  'd-block':true, 'mt-4':true, 'much-rounded':true, 'px-5':true,  'font-weight-light':true, 'color-white':true}"
+    [disabled]="loading"
+    [thin]="true"
+    type="submit"
+    [passedClass]="{'mx-auto':true, 'mt-4':true, 'much-rounded':true, 'px-5':true,  'font-weight-light':true, 'color-white':true}"
     (clickEvent)="signUp()">
         Register
     </custom-button>
