--- a/projectStack/src/app/shared/custom-button/custom-button.component.html
+++ b/projectStack/src/app/shared/custom-button/custom-button.component.html
@@ -9,6 +9,7 @@
     [disabled]="loading"
     [ngStyle]="styles"
     [disabled]="disabled"
+    [type]="type"
     (click)="disabled?'':click.emit($event);">
       <span *ngIf="!loading">
         <ng-container  *ngTemplateOutlet="content"></ng-container>
@@ -32,6 +33,7 @@
     [disabled]="loading"
     [ngStyle]="styles"
     [disabled]="disabled"
+    [type]="type"
     (click)="disabled?'':click.emit($event);">
       <span *ngIf="!loading">
         <ng-container  *ngTemplateOutlet="content"></ng-container>
