--- a/projectStack/src/app/shared/custom-button/custom-button.component.scss
+++ b/projectStack/src/app/shared/custom-button/custom-button.component.scss
@@ -1,5 +1,7 @@
 .strokedButton{
-  border: solid 1px #e25252 !important;
+  border-style: solid !important;
+  border-width: solid !important;
+  border-color: #e25252;
 }
 
 .roundedButton{
