--- a/projectStack/src/app/shared/header/header.component.scss
+++ b/projectStack/src/app/shared/header/header.component.scss
@@ -11,12 +11,12 @@ header.dropShadow{
 }
 
 .headerLogoHolder{
-  height: 60%;
+  height: 50%;
   width: 30%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position:left center;
-  background-image: url('/assets/logo_white.svg');
+  background-image: url('/assets/118702257_628251047836244_3399540571066845580_n.png');
 }
 
 nav a {
