--- a/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
+++ b/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
@@ -38,9 +38,24 @@
     <small class="font-weight-light d-block text-center">Researches Show That Professional & Creative Profile Summaries Increase Interests By 30%</small>
     <mat-form-field appearance="outline" class="mt-3 w-100">
       <mat-label>Summary</mat-label>
-      <textarea matInput [formControl]="group.get('summery')" style="min-height: 180px;" placeholder="As An Expert In Data Analytics..."></textarea>
+      <textarea
+      matInput
+      [formControl]="group.get('summery')"
+      style="min-height: 180px;"
+      placeholder="As An Expert In Data Analytics...">
+    </textarea>
+    <mat-error *ngIf="group.get('summery').errors && group.get('summery').errors.minlength">
+        Summery must be at least 120 character
+    </mat-error>
     </mat-form-field>
-    <custom-button color="primary" (clickEvent)="step = step+1" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true, 'px-3':true}">Proceed</custom-button>
+    <custom-button
+    color="primary"
+    (clickEvent)="step = step+1"
+    [thin]="true"
+    [long]="true"
+    [rounded]="true"
+    [disabled]="group.get('summery').invalid"
+    [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true}">Proceed</custom-button>
   </div>
   <input type="file" class="d-none" (change)="uploadFileHandler($event)" #fileInput/>
 </section>
@@ -56,7 +71,27 @@
     <h6 class="font-weight-light text-center mt-1">
       Professional Profile Picture Can Help Attract Better Opportunities
     </h6>
-    <custom-button color="primary" (clickEvent)="log($event);fileInput.click()" [loading]="loading" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true}">Upload Profile Picture</custom-button>
+    <custom-button
+    color="primary"
+    (clickEvent)="fileInput.click()"
+    [loading]="loading"
+    [thin]="true"
+    [long]="true"
+    [rounded]="true"
+    [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true}">
+    Upload Profile Picture
+  </custom-button>
+  <custom-button
+  color="primary"
+  (clickEvent)="skipImageUpload()"
+  [thin]="true"
+  [long]="true"
+  [disabled]="loading"
+  [rounded]="true"
+  [stroked]="true"
+  [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mb-3':true}">
+  <small>Skip For Now</small>
+</custom-button>
   </div>
   <input type="file" class="d-none" (change)="uploadFileHandler($event)" #fileInput/>
 </section>
@@ -73,16 +108,25 @@
     <h6 class="font-weight-light text-center mt-1">
       Evey Skill Counts, So Make Sure To List Them All.
     </h6>
-    <mat-form-field class="mt-3 w-75 mx-auto d-block">
-      <mat-label>Skills</mat-label>
-      <mat-select multiple [formControl]="group.get('skills')">
-        <mat-option *ngFor="let skill of staticData.Skills"  [value]="skill.ID">
-          {{skill.DESC}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded" (click)="validateSkills()">Proceed</button>
-
+    <div class="mt-4 w-100">
+      <app-tags-select
+      [min]="4"
+      [max]="15"
+      [control]="group.get('skills')"
+      [availableOptions]="staticData.Skills">
+      </app-tags-select>
+    </div>
+    <custom-button
+    color="primary"
+    (clickEvent)="step=step+1"
+    [loading]="loading"
+    [thin]="true"
+    [long]="true"
+    [rounded]="true"
+    [disabled]="group.get('skills').invalid"
+    [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-2':true, 'mb-3':true}">
+    Proceed
+  </custom-button>
   </div>
 </section>
 
@@ -100,7 +144,25 @@
       Here's Where It Get Competitive, So Sure Make To Show Off Your Work.
     </h6>
 
-    <custom-button color="primary" (clickEvent)="resumeInput.click()" [loading]="loading" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true}">Upload Resume</custom-button>
+    <custom-button
+    color="primary"
+    (clickEvent)="resumeInput.click()"
+    [thin]="true"
+    [long]="true"
+    [disabled]="loading"
+    [rounded]="true"
+    [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true}">Upload Resume</custom-button>
+    <custom-button
+    color="primary"
+    (clickEvent)="skipResumeUpload()"
+    [thin]="true"
+    [long]="true"
+    [disabled]="loading"
+    [rounded]="true"
+    [stroked]="true"
+    [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mb-3':true}">
+    <small>Skip For Now</small>
+  </custom-button>
     <input type="file" class="d-none" (change)="uploadResume($event)" #resumeInput/>
 
   </div>
@@ -116,34 +178,26 @@
       Just More Typical Information So We Can Do Better Matches
     </h6>
     <div>
-      <mat-form-field class="col-10 mx-auto d-block">
-        <mat-chip-list #chipList>
-          <mat-chip
-            *ngFor="let item of group.get('interests').value"
-            [selectable]="true"
-            [removable]="true"
-            (removed)="removeInterestChip(item)">
-            {{findInterestFromValue(item).DESC}}
-            <mat-icon matChipRemove>cancel</mat-icon>
-          </mat-chip>
-          <input
-            placeholder=""
-            #fruitInput
-            [matAutocomplete]="auto"
-            [matChipInputFor]="chipList"
-            [matChipInputSeparatorKeyCodes]="[188, 13]"
-            (matChipInputTokenEnd)="addInterestChip($event)">
-        </mat-chip-list>
-        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="interestSelectedFromAutoComplete($event)">
-          <mat-option *ngFor="let item of notSelectedInterests" [value]="item.DESC">
-            {{item.DESC}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
+      <app-tags-select
+      [min]="3"
+      [max]="20"
+      [control]="group.get('interests')"
+      [availableOptions]="staticData.Interests">
+      </app-tags-select>
+      <custom-button
+      color="primary"
+      (clickEvent)="step=step+1"
+      [loading]="loading"
+      [thin]="true"
+      [long]="true"
+      [rounded]="true"
+      [disabled]="group.get('interests').invalid"
+      [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-2':true, 'mb-3':true}">
+      Proceed
+    </custom-button>
     </div>
 
   </div>
-  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded" (click)="validateInterests()">Proceed</button>
 
 </section>
 <section *ngIf="step == 7">
@@ -160,7 +214,14 @@
       <div class="col-10">
         <mat-form-field appearance="outline" class="mx-auto d-block">
           <mat-label>Member Headline</mat-label>
-          <input type="text" [formControl]="group.get('headline')"  matInput  placeholder="Graphic Desinger">
+          <input
+          type="text"
+          [formControl]="group.get('headline')"
+          matInput
+          placeholder="Graphic Desinger">
+          <mat-error *ngIf="group.get('headline').errors && group.get('headline').errors.minlength">
+            Headline must contain at least 10 characters
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
@@ -168,7 +229,14 @@
       <div class="col-4 ">
         <mat-form-field appearance="outline" class="mx-auto d-block ">
           <mat-label>University</mat-label>
-          <input type="text" matInput  placeholder="Sumaya University" [matAutocomplete]="auto">
+          <input
+          type="text"
+          matInput
+          placeholder="Sumaya University"
+          [matAutocomplete]="auto">
+          <mat-error *ngIf="group.get('university').errors && group.get('university').errors.required">
+            This feild is required & must match the suggested results
+          </mat-error>
         </mat-form-field>
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="setUnivarsity($event)" >
           <mat-option *ngFor="let option of staticData.Universities" [value]="option.DESC">
@@ -180,6 +248,9 @@
         <mat-form-field appearance="outline" class="mx-auto d-block">
           <mat-label>Department</mat-label>
           <input type="text"  matInput form  placeholder="Computer Science" [matAutocomplete]="AutoForDep">
+          <mat-error *ngIf="group.get('department').errors && group.get('department').errors.required">
+            This feild is required & must match the suggested results
+          </mat-error>
         </mat-form-field>
         <mat-autocomplete #AutoForDep="matAutocomplete" (optionSelected)="setDepartment($event)" >
           <mat-option *ngFor="let option of staticData.Departments" [value]="option.DESC">
@@ -196,7 +267,16 @@
     </div>
 
   </div>
-  <custom-button  mat-flat-button color="primary" [loading]="loading" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true}" (clickEvent)="completeSignup()">Complete</custom-button>
+  <custom-button
+  color="primary"
+  [thin]="true"
+  [long]="true"
+  [disabled]="loading || group.invalid"
+  [rounded]="true"
+  [passedClass]="{'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true}"
+  (clickEvent)="completeSignup()">
+  Complete
+</custom-button>
 
 </section>
   </div>
