--- a/projectStack/src/app/messages-component/messages-component.component.scss
+++ b/projectStack/src/app/messages-component/messages-component.component.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   min-height: 20px;
   background-color: #79c79c;
-  z-index: 9999;
+  z-index: 99999999;
   border: solid 2px rgba(255, 255, 255, 0.3);
   box-shadow: 0px 9px 10px 0px rgba(255, 255, 255, 0.04);
   color: white;
