--- a/projectStack/src/app/profile/member/member.component.html
+++ b/projectStack/src/app/profile/member/member.component.html
@@ -76,8 +76,8 @@
         </div>
         <div class="d-flex flex-wrap justify-content-center">
           <ng-container *ngIf="!loading">
-            <div class="tag" *ngFor="let interestDesc of member?.interests">
-              {{interestDesc}}
+            <div class="tag" *ngFor="let interestID of member?.interests">
+              {{staticData.getInterestNameByID(interestID)}}
             </div>
           </ng-container>
           <ng-container *ngIf="loading">
