--- a/projectStack/src/app/shared/header-menu/submenu/submenu.component.scss
+++ b/projectStack/src/app/shared/header-menu/submenu/submenu.component.scss
@@ -1,9 +1,24 @@
 .menuItem{
   height: 60px;
   width: 60px;
-  background-color: #ffffff;
+  background: #ffffff;
   border: solid 1px rgba($color: #e25252, $alpha: 0.3);
-  border-radius: 0.2rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0px 0px 12px -1px rgba($color: #e25252, $alpha: 0.3);
+  user-select: none;
+  cursor: pointer;
+  background-color: rgba($color: #e25252, $alpha: 0.0);
+  transition: all 0.4s ease-out;
+  color: #e25252;
+}
 
+.menuItem:hover{
+  background-color: rgba($color: #e25252, $alpha: 1);
+  color: white;
+}
+.menuItem:active{
+  transform: scale(0.8);
 }
