--- a/projectStack/src/app/shared/header/header.component.html
+++ b/projectStack/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
 
     </div>
 
-    <div class="d-flex h-100">
+    <div class="d-flex h-100" *ngIf="isUserLoggedIn">
       <nav class="d-flex align-items-center mr-5 h-100">
           <a [routerLink]="['/dashboard']" routerLinkActive="activeLink" >
             Dashboard
@@ -39,13 +39,26 @@
       </nav>
 
       <div class="menu d-flex align-items-center mr-5">
-        <div class="bellIconCont cursorPointer scaleOnHover" (click)="openMenu()">
+        <div class="bellIconCont cursorPointer scaleOnHover"  matTooltip="Notifications" (click)="openMenu()">
           <img src="/assets/bell.svg" width="auto" height="48%">
         </div>
         <!-- <div class="color-white mx-3">
           Hi, <span class="font-weight-bold">Ibrahim!</span>
         </div> -->
       </div>
+    </div>
+    <div class="d-flex h-100 align-items-center" *ngIf="!isUserLoggedIn">
+      <custom-button
+      color="primary"
+      [stroked]="true"
+      [strokeColor]="'#fff'"
+      [rounded]="true"
+      [long]="true"
+      [thin]="true"
+      [styles]="{'font-weight':'light'}"
+      >
+          Join Project Corner
+      </custom-button>
     </div>
 </div>
 </header>
