--- a/projectStack/src/app/profile/member/member.component.html
+++ b/projectStack/src/app/profile/member/member.component.html
@@ -95,12 +95,9 @@
           Projects
         </div>
         <div  class="d-flex flex-wrap justify-content-center">
-          <div class="projectBlock m-2 px-2 py-3">
-            <h6 class="color-black mt-1 mb-0">Trash Project</h6>
-            <small class="color-block" style="opacity: 0.8;">
-              Where Trash Is Acually
-            </small>
-          </div>
+            <app-project-slides class="w-100">
+
+            </app-project-slides>
         </div>
       </div>
     </div>
