--- a/projectStack/src/app/shared/header-menu/submenu/submenu.component.html
+++ b/projectStack/src/app/shared/header-menu/submenu/submenu.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-wrap p-3 justify-content-center">
+<div class="d-flex flex-wrap p-3 justify-content-center w-100">
     <div class="menuItem mx-2 my-1" (click)="goToProfile()" matTooltip="Your Profile">
       <mat-icon>
         person
