--- a/projectStack/src/app/shared/header/header.component.scss
+++ b/projectStack/src/app/shared/header/header.component.scss
@@ -1,64 +1,76 @@
+
 header{
-  min-height: 50px;
-  height: 9vh;
   background-color: #e25252;
+}
 
+.upperSide{
+  min-height: 70px;
+  height: 8vh;
   position: relative;
-  z-index: 2;
-}
-header.dropShadow{
-  box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.2);
+  z-index: 100;
 }
 
-.headerLogoHolder{
+.logoContainer{
   height: 50%;
-  width: 30%;
+  width: 40%;
+  background-image: url('../../../assets/teamloungeslimeee-04.svg');
   background-size: contain;
+  background-position: left center;
   background-repeat: no-repeat;
-  background-position:left center;
-  background-image: url('/assets/118702257_628251047836244_3399540571066845580_n.png');
 }
-
-nav a {
-  margin-right: 1rem;
-  margin-left: 1rem;
+nav{
+  transition: 0.3s;
+  transform: translateY(-100%);
+  height: 0;
+  overflow: hidden;
+}
+nav .navItem{
+  opacity: 0;
+}
+header:hover nav{
+  transform: translateY(0);
+  height: 50px;
+}
+header:hover nav .navItem{
+  opacity: 0.8;
+}
+.navItem{
   color: white;
-  font-weight: lighter;
+  background-color: rgba($color: #fff, $alpha: 0);
   transition: all 0.2s ease-out;
   cursor: pointer;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-nav a:hover{
-  // font-weight: bold;
-}
-
-
-.bellIconCont{
-  height: 40px;
-  width: 40px;
+  text-decoration:none;
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
-  background-color: rgba(0,0,0,0.05);
+}
+
+.navItem:hover, .navItem.active{
+  color: #e25252;
+  background-color: rgba($color: #fff, $alpha: 1);
+  opacity: 1 !important;
+
 }
 
 
+.exploreBtn{
+  position: relative;
+}
 .exploreBtn .exploreContainer{
   height: 0;
   width: 400px;
   background: #ffffff;
   opacity: 1;
-  right: -100px;
-  top: 100%;
+  right:0;
+  margin-right: -120px;
+  top: calc(100% + 10px);
   opacity: 0;
   transition: all 0.2s ease-out;
   box-shadow: 0px 4px 7px -2px rgba(0,0,0,0.1);
   cursor: default;
   border: 0;
-  z-index: -1;
+  z-index: 1000000000;
 }
 
 
@@ -72,3 +84,21 @@ nav a:hover{
   height: 80%;
   background-color: rgba(226,82,82,0.2);
 }
+
+.sideUserAccount{
+  color: white;
+  background-color: rgba(255,255,255,0);
+  transition: all 0.2s ease-out;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 1rem;
+}
+
+.sideUserAccount:hover{
+  color: #e25252;
+  background-color: rgba(255,255,255,1);
+
+}
+
+
+
